# gamin

./: .cvsignore  AUTHORS  ChangeLog  MAINTAINERS  Makefile.am  NEWS  README  TODO  acinclude.m4  autogen.sh  configure.in  gamin.doap  gamin.pc.in  gamin.spec  gamin.spec.in
doc/: FAQ.html  Makefile.am  config.html  contacts.html  debug.html  debugging.txt  devel.html  differences.html  downloads.html  gamin-api.xml  gamin-refs.xml  gamin.html  index.html  internals.html  news.html  overview.html  python.html  security.html  site.xsl  using.html
lib/: Makefile.am  gam_error.c  gam_error.h
libgamin/: Makefile.am  TODO  fam.h  gam_api.c  gam_data.c  gam_data.h  gam_error.c  gam_error.h  gam_fork.c  gam_protocol.h  gamin.c  gamin_sym.version  testing.c
m4/: gthread-supported.m4
python/: Makefile.am  gamin.c  gamin.py
python/tests/: Makefile.am  basic.py  basic2.py  basic4.py  basic5.py  basic6.py  dnotify.py  dnotify10.py  dnotify11.py  dnotify12.py  dnotify13.py  dnotify2.py  dnotify3.py  dnotify4.py  dnotify5.py  dnotify6.py  dnotify7.py  dnotify8.py  dnotify9.py  flood.py  flood2.py  flood3.py  flood4.py  level.py  multiple.py  multiple2.py  multiple3.py  noexists.py  nokernel.py  readonly.py
server/: Makefile.am  gam_channel.c  gam_channel.h  gam_conf.c  gam_connection.c  gam_connection.h  gam_debug_lists.c  gam_debugging.c  gam_debugging.h  gam_dnotify.c  gam_dnotify.h  gam_eq.c  gam_eq.h  gam_error.c  gam_error.h  gam_event.c  gam_event.h  gam_excludes.c  gam_excludes.h  gam_fs.c  gam_fs.h  gam_hurd_mach_notify.c  gam_inotify.c  gam_inotify.h  gam_kqueue.c  gam_kqueue.h  gam_listener.c  gam_listener.h  gam_node.c  gam_node.h  gam_pidname.c  gam_poll.c  gam_poll.h  gam_poll_basic.c  gam_poll_dnotify.c  gam_poll_generic.c  gam_server.c  gam_server.h  gam_subscription.c  gam_subscription.h  (+8 more)
tests/: Makefile.am  testing.c
tests/result/: 10  2  3  4  5  6  7  8  tst1
tests/scenario/: 10.tst  2.tst  3.tst  4.tst  5.tst  6.tst  7.tst  8.tst
